<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tripist.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_myfavourites"
        android:name="com.example.tripist.views.myfavourites.MyFavouritesFragment"
        android:label="@string/title_myfavourites"
        tools:layout="@layout/fragment_myfavourites" />

    <fragment
        android:id="@+id/navigation_mylocation"
        android:name="com.example.tripist.views.mylocations.MyLocationsFragment"
        android:label="@string/title_mylocations"
        tools:layout="@layout/fragment_mylocations" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tripist.views.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>