<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:background="@drawable/alert_deletebackg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/konum_textview1"
                android:layout_width="230dp"
                android:layout_height="53dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/delete_question"
                android:textAlignment="center"
                android:textColor="#272525"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/deleteCancel_button"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radius_cancel"
                android:text="@string/cancel"
                android:textColor="@color/colorwhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/deleteYes_button"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radius"
                android:text="@string/yes"
                android:textColor="@color/colorwhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>